removed extra margin-bottom on content, fixed registration verification url, and fixed registration redirection url

--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -101,7 +101,6 @@ nav, footer {
 }
 .content {
     margin-top: 160px;
-    margin-bottom: 160px;
 }
 
 .send-to-back { z-index: 0 !important;}
